Completed websocket capabilities.