@@ -3,15 +3,18 @@ package ok2.core;
 import java.io.BufferedReader;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.net.Socket;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Base64;
 
-import sun.misc.BASE64Encoder;
-
+import ok2.ext.websocket.*;
 import ok2.httplib.Request;
 import ok2.httplib.Response;
 
@@ -20,9 +23,11 @@ public class ClientThread extends Thread {
 	private OK2App app;
 	private String protocol = "http";
 	private MessageDigest sha1;
-	public ClientThread(Socket accepted, OK2App app){
+	private WebsocketManager wm;
+	public ClientThread(Socket accepted, OK2App app, WebsocketManager wm){
 		cli = accepted;
 		this.app = app;
+		this.wm = wm;
 		
 		try{
 			 sha1 = MessageDigest.getInstance("SHA-1");
@@ -93,11 +98,12 @@ public class ClientThread extends Thread {
 		sha1.reset();
 		sha1.update(tohash.getBytes());
 		byte[] bout = sha1.digest();
-		String out = new BASE64Encoder().encode(bout);
-		return out;
+		Base64.Encoder b64 = Base64.getEncoder();
+		return b64.encodeToString(bout);
 	}
 	
 	private Thread ALIVE_TIMER;
+	private Request ws_req;
 	
 	public boolean handle_headers(Request req, Response res) throws IOException{
 		Iterator<String> keys = req.getAllHeaders();
@@ -117,7 +123,16 @@ public class ClientThread extends Thread {
 					}
 					switch(upg){
 					case "websocket":
+						//Return "not implemented" if our app is not labeled
+						//as a websocket server.
+						if( !(app instanceof WebsocketServer) ){
+							res.setStatus(501);
+							res.complete();
+							return true;
+						}
 						//Create websocket server
+						wm.add(cli);
+						ws_req = req;
 						res.setStatus(101);
 						res.header("Upgrade","websocket");
 						res.header("Connection","upgrade");
@@ -151,14 +166,51 @@ public class ClientThread extends Thread {
 		return false;
 	}
 	public void websocket() throws IOException{
-		InputStreamReader isr = new InputStreamReader( cli.getInputStream() );
-		ArrayList<Integer> ali = new ArrayList<>();
-		int c = 0;
-		while( (c = isr.read()) != -1 ){
-			ali.add(new Integer(c));
+		if( !(app instanceof WebsocketServer) ){
+			return; //Ignore this. This should NEVER happen.
 		}
+		InputStream isr = cli.getInputStream();
+		ArrayList<Byte> ali = new ArrayList<>();
+		byte c = 0;
+		while(!(isr.available() > 0));   //Wait for content
+		while( isr.available() > 0 ){  //Get our content
+			int temp = isr.read();
+			if( temp == -1 ){
+				break;
+			}
+			c = (byte)((temp) & 0xff);
+			ali.add(c);
+		}
+		
 		//Frame handling code
-		isr.close();
+		try{
+			int opcode = ali.get(0);
+			int clen = ali.get(1) & 0b01111111; //Screw the masking bit
+			
+			int start_index = 2;
+			
+			if( clen == 126 ){
+				start_index = 4;
+			}else if( clen == 127 ){
+				start_index = 10;
+			}else;
+			
+			List<Byte> masks = ali.subList(start_index, start_index + 4);
+			String decoded = "";
+			for( int pointer = start_index + 4, offset = 0; pointer < ali.size(); pointer++, offset = (offset+1) % 4 ){
+				char cv = (char)(ali.get(pointer) ^ masks.get(offset));
+				decoded += cv;
+			}
+			System.out.println("Decoded: " + decoded);
+			
+			Websocket ws = new Websocket(decoded, cli);
+			synchronized(wm){
+				((WebsocketServer)app).websocket_invoke(ws, opcode, wm, ws_req);
+			}
+		}catch(IndexOutOfBoundsException ioobe){
+			wm.remove(cli);
+			cli.close(); //Malformed client.
+		}
 	}
 	@Override
 	public void run(){
@@ -175,6 +227,9 @@ public class ClientThread extends Thread {
 					break;
 				}
 			} catch (IOException e) {
+				if( wm.getSockets().contains(cli) ){
+					wm.remove(cli);
+				}
 				return;
 			}
 		}
